## Process this file with automake to produce Makefile.in


include_HEADERS = announcer.h \
	announcer-common.h \
	bandwidth.h \
	bitfield.h \
	blocklist.h \
	cache.h \
	clients.h \
	completion.h \
	ConvertUTF.h \
	crypto.h \
	fdlimit.h \
	handshake.h \
	history.h \
	inout.h \
	jsonsl.h \
	list.h \
	log.h \
	magnet.h \
	makemeta.h \
	metainfo.h \
	natpmp_local.h \
	net.h \
	peer-common.h \
	peer-io.h \
	peer-mgr.h \
	peer-msgs.h \
	platform.h \
	platform-quota.h \
	port-forwarding.h \
	ptrarray.h \
	quark.h \
	resume.h \
	rpcimpl.h \
	rpc-server.h \
	session.h \
	stats.h \
	torrent.h \
	torrent-magnet.h \
	transmission.h \
	tr-dht.h \
	trevent.h \
	tr-getopt.h \
	tr-lpd.h \
	tr-udp.h \
	tr-utp.h \
	upnp.h \
	utils.h \
	variant.h \
	variant-common.h \
	verify.h \
	version.h \
	web.h \
	webseed.h
